add get-tags bucket method
